--- a/src/pages/desktop3.css
+++ b/src/pages/desktop3.css
@@ -365,3 +365,274 @@ a.vector-group:hover {
   background-color: transparent;
   outline: none;
 }
+
+.currency-section-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.currency-section-header {
+  width: 100%;
+  border-bottom: 1px solid var(--color-goldenrod);
+}
+
+.currency-section-header h1 {
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 56px;
+  font-family: var(--web-body-text-big);
+  margin: 0;
+  padding: 12px 30px;
+}
+
+.currency-wrapper {
+  width: 80%;
+  margin: 0 auto;
+}
+.currency-wrapper div h3 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 38px;
+  font-family: var(--web-body-text-big);
+  color: #ffffff;
+}
+
+.currency-card {
+  display: flex;
+  gap: 20px;
+  width: 40%;
+  margin-bottom: 30px;
+}
+
+.currency-card .currency-card-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  border-bottom: 1px solid #000000;
+  width: 100%;
+  margin: 0;
+}
+
+.currency-card .currency-card-content h3 {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 23px;
+  margin: 0;
+}
+
+a {
+  text-decoration: none;
+}
+.send-method-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+}
+.send-method-content .btn-outline {
+  width: 781px;
+  height: 166px;
+  background: #21242d;
+  border-radius: 27px;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  text-align: start;
+  padding-left: 50px;
+  font-family: var(--web-body-text-big);
+}
+.send-method-content .btn-outline h3 {
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 56px;
+  color: #ffffff;
+  margin: 0;
+}
+.send-method-content .btn-outline p {
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 38px;
+  margin: 0;
+  /* identical to box height */
+
+  color: #676e80;
+}
+
+.btn-default {
+  width: 674px;
+  height: 113px;
+  background: #f5c249;
+  border-radius: 27px;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 47px;
+  color: #21242d;
+  border: none;
+}
+
+.send-method-content .btn-outline:focus {
+  border: 1px solid #f5c249;
+}
+
+.payment-method-card-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.payment-method-card {
+  width: 718px;
+  height: 153px;
+
+  background: #2b303d;
+  border-radius: 16px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 20px;
+  margin-bottom: 30px;
+}
+
+.payment-method-card div {
+  width: 169px;
+  height: 58px;
+  background: #121212;
+  border-radius: 17px;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.payment-method-card span {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  text-align: center;
+
+  color: #ffffff;
+  font-family: var(--web-body-text-big);
+}
+.estimated-price {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  margin: 0;
+  color: #ffffff;
+  margin-bottom: 20px;
+  font-family: var(--web-body-text-big);
+}
+
+.paymentInput {
+  width: 781px;
+  height: 166px;
+
+  background: #252830;
+  border: 1px solid #f5c249;
+  border-radius: 18px;
+}
+
+.paymentInput input {
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  font-size: 34px;
+  color: #ffff;
+  padding: 0 20px;
+}
+
+.user-payment-agreement {
+  color: #ffffff;
+  font-family: var(--web-body-text-big);
+  margin: 0;
+}
+
+.reset-code-button {
+  font-style: normal;
+  color: #f5c249;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 27px;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+.reset-counter {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 22px;
+  text-align: center;
+
+  /* Neutral/3 */
+
+  color: #787a8d;
+  font-family: var(--web-body-text-big);
+}
+
+.main-section-payment {
+  position: relative;
+}
+
+.paymentShowModel {
+  /* position: absolute;
+  top: 50px;
+  left: 30%; */
+  width: 615px;
+  height: 600px;
+
+  background: #303440;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.paymentShowModel h3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 40px;
+  /* identical to box height, or 83% */
+
+  text-align: center;
+
+  color: #ffffff;
+  font-family: var(--web-body-text-big);
+}
+.paymentShowModel p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 40px;
+  /* identical to box height, or 100% */
+
+  text-align: center;
+
+  color: #ffffff;
+  font-family: var(--web-body-text-big);
+}
+
+.paymentShowModel img {
+  height: 270px;
+  margin: 0 auto;
+  width: 269px;
+}
+.model-container {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  justify-content: center;
+}
